--- a/hw2_chicago_data_challenge.csproj
+++ b/hw2_chicago_data_challenge.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>hw2_chicago_data_challenge</RootNamespace>
     <AssemblyName>hw2_chicago_data_challenge</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,17 +34,18 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="CsvHelper">
-      <HintPath>..\packages\CsvHelper.2.13.1.0\lib\net40-client\CsvHelper.dll</HintPath>
+      <HintPath>packages\CsvHelper.2.13.1.0\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileReader.cs" />
+    <Compile Include="PublicHealthData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="Grocery_Stores_-_2011.csv" />
     <None Include="Public_Health_Statistics-_Life_Expectancy_By_Community_Area.csv" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
