--- a/hw2_chicago_data_challenge.csproj
+++ b/hw2_chicago_data_challenge.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileReader.cs" />
     <Compile Include="PublicHealthData.cs" />
+    <Compile Include="GroceryStoreData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
