--- a/hw2_chicago_data_challenge.csproj
+++ b/hw2_chicago_data_challenge.csproj
@@ -36,12 +36,16 @@
     <Reference Include="CsvHelper">
       <HintPath>packages\CsvHelper.2.13.1.0\lib\net40-client\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicHealthData.cs" />
     <Compile Include="GroceryStoreData.cs" />
     <Compile Include="Reader_and_Correlation.cs" />
+    <Compile Include="UnitTesting.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
